# Q1f

./: .env.example  .eslintrc.cjs  .replit  API_IDEMPOTENCY.md  PROJECT_MAP.md  README-bootstrap.md  RELEASE_CHECKLIST.md  ROADMAP.md  UI_REFACTORING_MAP.md  ZEON_Platform_Description.md  design_guidelines.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  replit.md  run.py  tailwind.config.ts  vitest.config.ts
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--1--1768553933540_1768553933540.txt  Pasted--2-MARKET-SESSIONS-LIVE-STREAM-REPLAY-1-DB-market-sessi_1768551376412.txt  Pasted--Admin-Console-Spec-Drizzle--1768573264319_1768573264319.txt  Pasted--Admin-UI-admin-Dashboard-Users-Opera-1768574850320_1768574850321.txt  Pasted--Claude-Code-Please-run-a-final-verification-of-everyth_1774186760749.txt  Pasted--PROMPT-A-Replit-ROLE-Principal-Backend-Engineer--17685_1768577504802.txt  Pasted--Patch-Pack-01-401-403-db-seed--1768579330099_1768579330100.txt  Pasted--Principal-Backend-Engineer-Node-Express-TS-Replit-Live_1768561080354.txt  Pasted--Principal-Backend-Engineer-Node-TS-Postgres-Drizzle-Re_1768560062729.txt  Pasted--Principal-Backend-Engineer-Node-js-TS-Replit-1-MARKET-_1768559578628.txt  Pasted--Principal-Backend-Engineer-TypeScript-Replit--17685606_1768560691007.txt  Pasted--Principal-Full-Stack-Engineer-Replit-React18-TS-Wouter_1768563751954.txt  Pasted--Prompt-Compliance-Working-Correctness-Audit-VERIFY-FI-_1768553482096.txt  Pasted--Prompt-Compliance-Working-Correctness-Audit-VERIFY-FI-_1768564147624.txt  (+24 more)
docs/: API.md  (+8 more)
(+404 files in other folders)
